--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
     <title>S N A K E </title>
 </head>
@@ -14,6 +17,7 @@
         <h1>SNAKE GAME</h1>
         <canvas id="game-canvas" width="500" height="500"></canvas>
         <div id="score">Points: 0</div>
+        <button id="restart">Restart</button>
     </div>
 
 
