startbtn added, css and points in js

--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
     <div id="game-container">
         <h1>SNAKE GAME</h1>
         <canvas id="game-canvas" width="500" height="500"></canvas>
-        <div id="score">Points: 0</div>
-        <button id="restart">Restart</button>
+        <div id="score">Points</div>
+
+        <div id="button-container">
+            <button id="start-btn">Start</button>
+            <button id="restart-btn">Restart</button>
+        </div>
     </div>
 
 
