Refactor Snake to classes, add speed system and help modal

--- a/index.html
+++ b/index.html
@@ -21,9 +21,37 @@
         <div id="button-container">
             <button id="start-btn">Start</button>
             <button id="restart-btn">Restart</button>
+            <button id="help-btn">How to play</button>
         </div>
     </div>
 
+
+    <div id="help-modal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>🎮 HOW TO PLAY</h2>
+            <div class="instructions">
+                <h3>🎯 GOAL</h3>
+                <p>Eat red apples to grow longer and score points!</p>
+
+                <h3>🕹️ CONTROLS</h3>
+                <p><strong>Arrow Keys</strong> - Move snake</p>
+                <p><strong>SPACE</strong> - Start/Pause game</p>
+                <p><strong>START button</strong> - Begin game</p>
+                <p><strong>RESTART button</strong> - Reset game</p>
+
+                <h3>⚠️ GAME OVER IF:</h3>
+                <p>• Snake hits the wall</p>
+                <p>• Snake bites itself</p>
+
+                <h3>🚀 DIFFICULTY</h3>
+                <p>Speed increases every 30 points!</p>
+
+                <h3>💡 TIP</h3>
+                <p>Plan your moves ahead - you can't reverse 180°!</p>
+            </div>
+        </div>
+    </div>
 
     <script src="main.js" type="module"></script>
 
